--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -5,15 +5,24 @@
     &_fz14 {
         font-size: 14px;
         line-height: 21px;
+        font-weight: bold;
     }
     &_fz16 {
         font-size: 16px;
         line-height: 24px;
+        font-weight: bold;
+    }
+    &_fz20 {
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: bold;
     }
     &_fz36 {
         font-size: 36px;
+        font-weight: bold;
     }
     &_fz48 {
         font-size: 48px;
+        font-weight: bold;
     }
 }
