--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -11,3 +11,18 @@
         border-radius: 100%;
     }
 }
+
+@mixin before_circle-mid {
+    &::before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: -6px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 36px;
+        height: 36px;
+        background-color: $main-color;
+        border-radius: 100%;
+    }
+}
