--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -13,6 +13,8 @@
         grid-row: 1 / 3;
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &_title {
@@ -31,7 +33,6 @@
     }
     .divider {
         margin: 0;
-
     }
 
     &__skills {
@@ -46,9 +47,10 @@
             column-gap: 20px;
             &-circle {
                 padding-left: 15px;
+                padding-top: 20px;
                 @include before_circle;
                 &::before {
-                    top: -15px;
+                    top: 2px;
                 }
             }
         }
