--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -19,6 +19,8 @@
         transition: 0.5s all;
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         &:hover {
             // transform: scale(1.05);
