--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,3 +25,6 @@
 @import 'blocks/skills';
 @import 'blocks/portfolio';
 @import 'blocks/price';
+@import 'blocks/contacts';
+@import 'blocks/policy';
+@import 'base/media';
