--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -3,4 +3,12 @@
     background: $main-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     padding: 12px 25px;
+    transition: 0.3s all;
+        &:hover {
+            color: #000000;
+            text-decoration: none;
+            // transform: scale(1.05);
+            background: rgba(0,0,0,0);
+            box-shadow: inset 0 0 0 3px $main-color;
+        }
 }
