--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -40,7 +40,32 @@
         }
         &__rating {
             grid-template-columns: repeat(2,350px);
+            justify-content: space-between;
+        }
+    }
+    .portfolio {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 280px);
+            grid-auto-rows: 280px;
             justify-content: space-around;
+            row-gap: 35px;
+            .horizontal, .vertical {
+                grid-row: unset;
+                grid-column: unset;
+            }
+        }
+    }
+    .price {
+        &__wrapper {
+            justify-content: space-around;
+        }
+    }
+    .contacts {
+        &__wrapper {
+            grid-template-columns: 325px 500px;
+        }
+        &__form {
+            grid-template: 45px 190px 45px / repeat(auto-fit, 240px);
         }
     }
 }
@@ -75,12 +100,31 @@
     }
     .skills {
         &__wrapper {
-            grid-template-columns: repeat(auto-fill, 250px)
+            grid-template-columns: repeat(auto-fit, 250px)
         }
         &__rating {
+            justify-content: space-between;
             grid-auto-rows: 55px;
             column-gap: 25px;
             row-gap: 40px;
+        }
+    }
+    .price {
+        &__wrapper {
+            margin: 0;
+            margin-top: 20px;
+            grid-template-columns: repeat(auto-fit,320px);
+        }
+    }
+    .contacts {
+        &__wrapper {
+            grid-template-columns: auto;
+            justify-content: center;
+        }
+        &__img {
+            img {
+                display: none;
+            }
         }
     }
 }
@@ -126,6 +170,7 @@
         }
     }
     .resume {
+        padding-top: 40px;
         &__wrapper {
             padding-top: 40px;
             justify-content: center;
@@ -133,14 +178,44 @@
         }
     }
     .skills {
+        padding-top: 40px;
         &__wrapper {
             margin: 20px 10px 0 10px;
         }
         &__rating {
-            grid-template-columns: repeat(auto-fill,350px);
+            justify-content: center;
+            grid-template-columns: repeat(auto-fit,350px);
             margin-top: 40px;
         }
     }
+    .portfolio {
+        padding-top: 40px;
+        &__wrapper {
+            margin-top: 40px;
+        }
+    }
+    .price {
+        padding-top: 40px;
+        &__wrapper {
+            justify-content: center;
+        }
+        &__item {
+            margin-top: 20px;
+        }   
+    }
+    .contacts {
+        padding-top: 40px;
+        &__btn {
+            padding: 12px 20px;
+        }
+        &__form {
+            grid-template: 45px 45px 145px/1fr;            
+        }
+        &__input {
+            grid-column: 1/3;
+        }
+    }
+    
 }
 
 @media (max-width: 576px) {
@@ -187,6 +262,38 @@
             &-scale {
                 width: 100%;
             }
+        }
+    }
+    .price {
+        padding-top: 40px;
+        &__wrapper {
+            grid-template-columns: repeat(auto-fill,280px);
+        }
+    }
+    .contacts {
+        padding-bottom: 50px;
+        .divider {
+            margin-top: 5px;
+        }
+        &__wrapper {
+            padding: 0 10px 0 10px;
+        }
+        &__subtitle {
+            margin-top: 10px;
+        }
+        &__trigger {
+            grid-column: unset;
+            grid-template-columns: 1fr;
+            column-gap: unset;
+            row-gap: 20px;
+        }
+        &__policy {
+            margin: 0 auto;
+            width: 180px;
+            line-height: 18px;
+        }
+        &__btn {
+            order: 2;
         }
     }
 }
