--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -4,18 +4,18 @@
     &__wrapper {
         margin: 60px 25px 0 25px;
         display: grid;
-        grid-template-columns: repeat(2,340px);
+        // grid-template-columns: repeat(2,340px);
+        grid-template: repeat(3, minmax(45px, auto)) / repeat(2, 365px);
         justify-content: space-between;
+        grid-auto-rows: minmax(45px, auto);
     }
 
     &__item {
-        display: grid;
-        padding-left: 10px;
-        margin-top: 15px;
         position: relative;
-        grid-template-columns: 150px;
-        grid-template-rows: 21px;
-        grid-template: 21px / minmax(150px, auto) 122px;
+        display: grid;
+        grid-template: repeat(2, minmax(21px, auto)) / repeat(2, minmax(auto, 186px));
+        row-gap: 5px;
+        padding-left: 25px;
         &-descr {
             grid-column: 1/3;
             font-weight: 500;
@@ -28,7 +28,7 @@
             &:before {
                 content: '';
                 position: absolute;
-                top: 2px;
+                top: 5px;
                 left: -25px;
                 width: 15px;
                 height: 15px;
