--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -4,7 +4,7 @@
         margin: 60px 10px 0 10px;
         display: grid;
         grid-template-columns: repeat(4, 270px);
-        grid-template-rows: repeat(2, minmax(270px, auto));
+        grid-template-rows: minmax(270px, auto);
         grid-auto-columns: 270px;
         grid-auto-rows: 270px;
         gap: 13px;
