--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -6,13 +6,14 @@
         grid-template-columns: repeat(4, 270px);
         grid-template-rows: minmax(270px, auto);
         grid-auto-columns: 270px;
-        grid-auto-rows: 270px;
+        grid-auto-rows: minmax(270px, auto);
         gap: 13px;
     }
 
     &__block {
         border: 1px solid #000000;
         padding: 30px 29px 25px 30px;
+        min-height: 250px;
     }
 
     &__descr {
